fix: gate consumer parameters to Download button visibility

--- a/src/components/Asset/AssetActions/Download/index.module.css
+++ b/src/components/Asset/AssetActions/Download/index.module.css
@@ -41,7 +41,7 @@
 }
 
 .consumerParameters > div {
-  margin-top: var(--spacer);
+  margin-top: calc(var(--spacer) / 2);
   border-bottom: none;
 }
 
